Updated website files

--- a/cv.html
+++ b/cv.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Me</title>
+    <title>Resume</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="cv">
+    <div class="fade-in-page"></div>
     <div class="hamburger-menu">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -16,14 +17,17 @@
     <nav class="nav-menu">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="cv.html">CV</a></li>
         </ul>
     </nav>
     
     <script src="script.js"></script>
-    <h1>About Me</h1>
-    <p>This is the About Me page.</p>
+    <h1>CV</h1>
+    <div class="cv-container">
+        <a href="imgs/AndreMK---CV-2-ENG.png" download class="download-btn">Download My CV</a>
+        <img src="imgs/AndreMK---CV-2-ENG.png" alt="CV">
+
+    </div>
 </body>
 </html>
