--- a/index.html
+++ b/index.html
@@ -6,11 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AMK</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
-
+    
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <section class="hero">
+        <div class="fade-in-page"></div>
         <div class="hero-background"></div>
         <div class="hero-text-container">
             <h1>Hi! I'm </br> Andre Morales Kalamar</h1>
@@ -24,9 +25,8 @@
         </div>
         <nav class="nav-menu">
             <ul>
-                <li><a href="about.html">About Me</a></li>
                 <li><a href="portfolio.html">Photo Portfolio</a></li>
-                <li><a href="resume.html">Resume</a></li>
+                <li><a href="cv.html">CV</a></li>
             </ul>
         </nav>
     </section>    
