--- a/portfolio.html
+++ b/portfolio.html
@@ -6,7 +6,8 @@
     <title>Portfolio</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="portfolio">
+    <div class="fade-in-page"></div>
     <div class="hamburger-menu">
         <div class="bar"></div>
         <div class="bar"></div>
@@ -16,14 +17,45 @@
     <nav class="nav-menu">
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Me</a></li>
             <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="resume.html">Resume</a></li>
+            <li><a href="cv.html">CV</a></li>
         </ul>
     </nav>
     
-    <script src="script.js"></script>
+
     <h1>Portfolio</h1>
-    <p>This is the Portfolio page.</p>
+    
+    <div class="gallery">
+        <img src="portfolio-imgs/arch1.webp" alt="Photo 1">
+        <img src="portfolio-imgs/arch2.webp" alt="Photo 2">
+        <img src="portfolio-imgs/arch3.webp" alt="Photo 3">
+        <img src="portfolio-imgs/arch4.webp" alt="Photo 4">
+        <img src="portfolio-imgs/arch5.webp" alt="Photo 5">
+        <img src="portfolio-imgs/arch6.webp" alt="Photo 6">
+        <img src="portfolio-imgs/car1.webp" alt="Photo 7">
+        <img src="portfolio-imgs/car2.webp" alt="Photo 8">
+        <img src="portfolio-imgs/car3.webp" alt="Photo 9">
+        <img src="portfolio-imgs/car4.webp" alt="Photo 10">
+        <img src="portfolio-imgs/car5.webp" alt="Photo 11">
+        <img src="portfolio-imgs/car6.webp" alt="Photo 12">
+        <img src="portfolio-imgs/norway1.webp" alt="Photo 13">
+        <img src="portfolio-imgs/norway2.webp" alt="Photo 14">
+        <img src="portfolio-imgs/norway3.webp" alt="Photo 15">
+        <img src="portfolio-imgs/norway4.webp" alt="Photo 16">
+        <img src="portfolio-imgs/sw1.webp" alt="Photo 17">
+        <img src="portfolio-imgs/sw2.webp" alt="Photo 18">
+        <img src="portfolio-imgs/sw3.webp" alt="Photo 19">
+        <img src="portfolio-imgs/sw4.webp" alt="Photo 20">
+    </div>
+    <div class="lightbox">
+        <span class="close">&times;</span>
+        <img class="lightbox-image" src="" alt="">
+        <div class="lightbox-navigation">
+            <span class="prev">&#10094;</span>
+            <span class="next">&#10095;</span>
+        </div>
+    </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
